src/objects/Resource__c.object
<CustomObject>
    <description>Challenge 2287 Object Model</description>
    <fields>
        <fullName>Assignment__c</fullName>
        <label>Assignment</label>
        <referenceTo>Assignment__c</referenceTo>
        <relationshipLabel>Resources</relationshipLabel>
        <relationshipName>Resources</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Standard_Rate__c</fullName>
        <label>Standard Rate</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <inlineHelpText>Unique Resource ID on a Project</inlineHelpText>
        <label>Unique ID</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <inlineHelpText>external id of the resources (shows the order of the resource respective to the other resources)</inlineHelpText>
        <label>id</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Resource</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Standard_Rate__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>